feat: add get exchanges list
add seeds
